implement the ticket booking apis